--- a/css/tvguide-style.css
+++ b/css/tvguide-style.css
@@ -1,5 +1,5 @@
 /* ============================================
-   INDEX STYLES
+   TVGUIDE STYLES
    ============================================ */
 
 /* Hide Now & Next under 500px */
